--- a/public/style.css
+++ b/public/style.css
@@ -6,20 +6,38 @@ body{
     background: linear-gradient(rgb(255,255,255) , rgb(109,39,239));
     height: 100vh;
 }
+
+img{
+    
+    display: block;
+    margin: auto;
+    height: 50px;
+    width: 50px;
+}
+
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    margin-top: 12px;
+    text-align: center;
+    font-weight: bold;
+}
 .contan{
     height: 70vh;
     border: 2px solid black;
     padding: 15px 15px;
     overflow-y: auto;
+    border-radius: 15px;
 }
 .message{
-    background-color: lightgrey;
+    background-color: rgb(238, 226, 226);
     padding: 15px 15px;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 26px;
     font-weight: bold;
-    width: 25%;
+    max-width: 25% !important;
     margin-bottom: 15px;
+   height: auto;
 }
 .left{
     float: left;
@@ -33,11 +51,15 @@ body{
     display: block;
     margin: auto;
     text-align: center;
-    max-width: 92%;
+    max-width: auto;
 }
 #massageInp{
-    padding:3px;
-    width: 92%;
+    padding: 3px;
+    width: 80%;
     outline: hidden;
-
+    font-size: 20px;
+    
+}
+.btn{
+    margin: 0 5px;
 }
